small bug where stuff was looking off when listing view was viewed on mobile

--- a/assets/css/lsx-business-directory-rtl.css
+++ b/assets/css/lsx-business-directory-rtl.css
@@ -121,9 +121,13 @@ body.single-business-directory article .entry-meta > * { display: block; }
 /* Archive Template Row Layout */
 .archive .business-row-wrapper, .search .business-row-wrapper { -webkit-box-sizing: border-box; box-sizing: border-box; border: 1px solid #EEEEEE; background-color: white; -webkit-box-shadow: -1px 2px 6px 0 rgba(155, 155, 155, 0.45); box-shadow: -1px 2px 6px 0 rgba(155, 155, 155, 0.45); padding-right: 0px; padding-left: 30px; margin-bottom: 25px; }
 
+@media screen and (max-width: 991px) { .archive .business-row-wrapper, .search .business-row-wrapper { padding-right: 0px; padding-left: 0px; } }
+
 .archive .business-row-wrapper .business-content, .search .business-row-wrapper .business-content { padding-right: 20px; }
 
-@media screen and (max-width: 991px) { .archive .business-row-wrapper .business-content .business-details, .search .business-row-wrapper .business-content .business-details { padding-right: 20px; } }
+@media screen and (max-width: 991px) { .archive .business-row-wrapper .business-content, .search .business-row-wrapper .business-content { padding-right: 15px; } }
+
+@media screen and (max-width: 991px) { .archive .business-row-wrapper .business-content .business-details, .search .business-row-wrapper .business-content .business-details { padding-right: 25px; padding-left: 25px; } }
 
 .archive .business-row-wrapper .business-content .business-details h4.business-title, .search .business-row-wrapper .business-content .business-details h4.business-title { color: #4D4D4D; margin-top: 13px; margin-bottom: 7px; }
 
